# ProcessPlanner

./: CMakeLists.txt  README.md
resources/: processes_input.txt
src/: fcfs_planner.cpp  fcfs_planner.h  main.cpp  planner.cpp  planner.h  process.cpp  process.h  processes_input.txt  round_robin_planner.cpp  round_robin_planner.h  sjf_apr_planner.cpp  sjf_apr_planner.h  sjf_coop_planner.cpp  sjf_coop_planner.h
src/planners/: fcfs_planner.cpp  fcfs_planner.h  planner.cpp  planner.h  sjf_coop_planner.h
